ms and code updated, peding to re-run with adapt_delta of 0.95

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -18,16 +18,6 @@
   publisher={IEEE}
 }
 
-@article{kim2021ultra,
-  title={Is ultra-short-term heart rate variability valid in non-static conditions?},
-  author={Kim, Jin Woong and Seok, Hyeon Seok and Shin, Hangsik},
-  journal={Frontiers in physiology},
-  volume={12},
-  pages={596060},
-  year={2021},
-  publisher={Frontiers Media SA}
-}
-
 @article{tiwari2021analysis,
   title={Analysis of heart rate variability and implication of different factors on heart rate variability},
   author={Tiwari, Reena and Kumar, Ravindra and Malik, Sujata and Raj, Tilak and Kumar, Punit},
@@ -48,6 +38,27 @@
   pages={28114},
   year={2025},
   publisher={Nature Publishing Group UK London}
+}
+
+@article{shaffer2017overview,
+  title={An overview of heart rate variability metrics and norms},
+  author={Shaffer, Fred and Ginsberg, Jay P},
+  journal={Frontiers in public health},
+  volume={5},
+  pages={258},
+  year={2017},
+  publisher={Frontiers Media SA}
+}
+
+@article{schneider2020autonomic,
+  title={Autonomic dysfunction in posttraumatic stress disorder indexed by heart rate variability: a meta-analysis},
+  author={Schneider, Martha and Schwerdtfeger, Andreas},
+  journal={Psychological medicine},
+  volume={50},
+  number={12},
+  pages={1937--1948},
+  year={2020},
+  publisher={Cambridge University Press}
 }
 
 @article{rosas2024bayesian,
@@ -87,4 +98,79 @@
   pages={594880},
   year={2020},
   publisher={Frontiers Media SA}
+}
+
+@article{orini2023long,
+  title={Long-term association of ultra-short heart rate variability with cardiovascular events},
+  author={Orini, Michele and van Duijvenboden, Stefan and Young, William J and Ram{\'\i}rez, Julia and Jones, Aled R and Hughes, Alun D and Tinker, Andrew and Munroe, Patricia B and Lambiase, Pier D},
+  journal={Scientific Reports},
+  volume={13},
+  number={1},
+  pages={18966},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{cheng2022heart,
+  title={Heart rate variability in patients with anxiety disorders: A systematic review and meta-analysis},
+  author={Cheng, Ying-Chih and Su, Min-I and Liu, Cheng-Wei and Huang, Yu-Chen and Huang, Wei-Lieh},
+  journal={Psychiatry and Clinical Neurosciences},
+  volume={76},
+  number={7},
+  pages={292--302},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
+@article{tomasi2024heart,
+  title={Heart rate variability: Evaluating a potential biomarker of anxiety disorders},
+  author={Tomasi, Julia and Zai, Clement C and Pouget, Jennie G and Tiwari, Arun K and Kennedy, James L},
+  journal={Psychophysiology},
+  volume={61},
+  number={2},
+  pages={e14481},
+  year={2024},
+  publisher={Wiley Online Library}
+}
+
+@article{german2014wavelet,
+  title={Wavelet transform based HRV analysis},
+  author={German-Sallo, Zoltan},
+  journal={Procedia Technology},
+  volume={12},
+  pages={105--111},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{guo2022review,
+  title={A review of wavelet analysis and its applications: Challenges and opportunities},
+  author={Guo, Tiantian and Zhang, Tongpo and Lim, Enggee and Lopez-Benitez, Miguel and Ma, Fei and Yu, Limin},
+  journal={IEEe Access},
+  volume={10},
+  pages={58869--58903},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{martin2018improving,
+  title={Improving the understanding of sleep apnea characterization using Recurrence Quantification Analysis by defining overall acceptable values for the dimensionality of the system, the delay, and the distance threshold},
+  author={Mart{\'\i}n-Gonz{\'a}lez, Sof{\'\i}a and Navarro-Mesa, Juan L and Juli{\'a}-Serd{\'a}, Gabriel and Ram{\'\i}rez-{\'A}vila, G Marcelo and Ravelo-Garc{\'\i}a, Antonio G},
+  journal={PLoS One},
+  volume={13},
+  number={4},
+  pages={e0194462},
+  year={2018},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{castillo2025enhancing,
+  title={Enhancing cardiovascular monitoring: a non-linear model for characterizing RR interval fluctuations in exercise and recovery},
+  author={Castillo-Aguilar, Mat{\'\i}as and Mabe-Castro, Diego and Medina, David and N{\'u}{\~n}ez-Espinosa, Cristian},
+  journal={Scientific Reports},
+  volume={15},
+  number={1},
+  pages={8628},
+  year={2025},
+  publisher={Nature Publishing Group UK London}
 }
