--- a/index.qmd
+++ b/index.qmd
@@ -31,35 +31,15 @@ editor_options:
 
 # Introduction
 
-The rhythm of the human heart, far from being a simple, constant beat, is a complex and dynamic signal reflecting the continuous interplay between an organism and its internal and external environments [@arakaki2023connection]. The precise timing between successive heartbeats, measured as the R-R interval (RRi), is a primary non-invasive proxy for autonomic nervous system (ANS) activity. The analysis of variations in this interval, a biomarker known as heart rate variability (HRV), has become a cornerstone for assessing cardiovascular health, stress responses, and overall physiological state [@arakaki2023connection; @huber2025brain]. This variability arises from the coordinated actions of multiple regulatory systems, including the sympathetic and parasympathetic branches of the ANS, baroreflexes, and thermoregulatory mechanisms [@tiwari2021analysis].
+A central goal in contemporary biomedical science is to mechanistically link the dynamics of physiological systems to human health and disease. A primary obstacle to this goal is the inferential gap between what we can measure with high-temporal resolution via wearable sensors, and the unobservable neurobiological processes that generate these measurements [@huber2025brain]. This "inverse problem" is nowhere more apparent than in the study of the autonomic nervous system (ANS), where heart rate variability (HRV) is the dominant non-invasive proxy [@shaffer2017overview]. The R-R interval (RRi) time-series is an invaluable signal, yet it is also a profound analytical challenge: it is a complex, integrated output reflecting the ceaseless, dynamic interplay of multiple regulatory systems [@arakaki2023connection]. Therefore, progress is contingent upon solving a fundamental problem of principled inverse inference: the development of a formal methodology to deconstruct this composite signal into quantitative, interpretable, and falsifiable estimates of its underlying generative processes. The urgency of this problem is underscored by its direct relevance to major public health burdens, as autonomic dysregulation is a core feature of disorders ranging from cardiovascular disease to anxiety and post-traumatic stress [@cheng2022heart; @tomasi2024heart; @schneider2020autonomic], where a precise characterization of system dynamics is essential for diagnosis and treatment [@orini2023long].
 
-Despite its utility, a significant limitation of traditional HRV analysis is its reliance on time-domain or frequency-domain metrics derived from static, short-term data windows [@kim2021ultra; @lu2023uncertainties]. The conventional approach, standardized by consensus, typically involves calculating metrics over a five-minute recording period. In the time domain, this yields summary statistics such as the standard deviation of normal-to-normal intervals (SDNN) or the root mean square of successive differences (RMSSD) [@shaffer2020critical]. While informative, these metrics fundamentally collapse a dynamic, evolving process into a single, static number [@kim2021ultra]. An RMSSD value of 40 ms, for example, provides an aggregate measure of high-frequency variability but offers no information about whether that variability was constant, increasing, or decreasing over the five-minute window. This temporal averaging obscures the very dynamics that are often of greatest physiological interest, particularly when an organism is adapting to a challenge [@kim2021ultra]. For a system in constant flux, a single mean or standard deviation is an impoverished descriptor, akin to summarizing a film with a single still frame.
+The analytical tools currently employed by the majority of researchers are fundamentally unsuited for this task. The prevailing paradigm, which relies on calculating summary statistics within fixed temporal windows, imposes a static, linear worldview on a system that is intrinsically dynamic and non-linear. This approach is predicated on an assumption of stationarity that is axiomatically violated during any physiological transition of scientific or clinical interest [@shaffer2020critical; @kim2021ultra]. This is not a minor statistical infraction; it is a conceptual error that produces misleading and often uninterpretable results [@kim2021ultra]. For instance, by averaging across a period of stress recovery, such methods conflate the initial sympathetic response with the subsequent parasympathetic rebound, yielding a single, opaque number that masks the system's adaptive capacity [@shaffer2020critical; @kim2021ultra]. This can render it impossible to distinguish a resilient individual who exhibits a rapid and robust recovery from a vulnerable one whose recovery is sluggish, a critical biomarker of pathology [@lu2023uncertainties]. This "discretize-and-summarize" approach systematically discards the temporal structure of the data, thereby precluding the direct estimation of core mechanistic properties such as response latencies, rates of change, and adaptive magnitudes, which constitute the very essence of the physiological process [@tiwari2021analysis].
 
-This issue is arguably more acute in conventional frequency-domain analysis. Methods based on the Fast Fourier Transform (FFT) are predicated on the mathematical assumption that the signal is wide-sense stationary—that its statistical properties, such as mean and variance, are constant over the analysis window. Yet, physiological signals, especially during transitions like the onset of exercise or recovery from a cognitive stressor, are the epitome of non-stationarity. When a non-stationary signal is subjected to an FFT, the resulting power spectrum is not a true representation of any single physiological state. Instead, it becomes a composite, a smeared average of all the different spectral states that occurred within the window. A peak in the low-frequency (LF) band, for instance, might not reflect sustained sympathetic activity but rather the aliased result of a rapid change in heart rate. Consequently, while such methods may offer insights into a snapshot of a physiological state under controlled, steady-state conditions, they are fundamentally ill-suited to capture the dynamic, non-stationary nature of RRi signals during physiological transitions or stress [@tiwari2021analysis; @lu2023uncertainties]. The implicit assumption of stationarity in these fixed-window approaches can obscure subtle, yet physiologically critical, shifts in heart rate and its underlying variability [@kim2021ultra; @lu2023uncertainties]. This methodological constraint forces researchers into a difficult compromise: use short windows to better approximate stationarity at the cost of poor frequency resolution, or use long windows to achieve better frequency resolution at the cost of violating the stationarity assumption more severely. Furthermore, these conventional analyses often fail to establish a direct mechanistic link between observed changes in HRV and the underlying physiological processes responsible for them. A change in a summary statistic does not, by itself, constitute a model of the physiological process that produced it; it is a description of an outcome, not an explanation of a mechanism.
+Acknowledging these limitations, more sophisticated signal processing and modeling techniques have been proposed, yet these too fail to resolve the core inferential challenge. They present a false choice between phenomenological description and non-interpretable abstraction. Time-frequency decompositions, such as the wavelet transform, excel at providing detailed visualizations of spectral dynamics, making them useful for exploratory analysis [@german2014wavelet]. However, they are fundamentally descriptive; they do not instantiate a formal, generative model of the underlying biology. They can show that a change occurred, but they cannot provide a parameterized, testable estimate of what changed [@guo2022review]. Conversely, advanced modeling traditions like state-space models offer mathematical sophistication for tracking and forecasting a system's evolution [@martin2018improving; @rosas2024bayesian]. While powerful, their typical formulations trade physiological fidelity for mathematical convenience; the latent states they infer are defined by statistical properties rather than biological identity, lacking a direct, one-to-one mapping to constructs like vagal tone or sympathetic drive [@rosas2024bayesian; @liu2024efficient]. Consequently, the field remains methodologically stalled, caught between descriptive tools that cannot test mechanisms and abstract models whose mechanisms are not directly interpretable.
 
-While various advanced modeling approaches have attempted to address these limitations, they often fall short in other critical areas, leaving a significant gap in the analytical toolkit. For instance, state-space models have shown promise in tracking the evolution of cardiac dynamics [@rosas2024bayesian; @liu2024efficient], conceptualizing the RRi signal as an observation of a hidden, underlying physiological state that evolves through time. This approach is conceptually elegant and explicitly built to handle non-stationarity. However, its practical application is frequently hindered by significant challenges. The complexity of defining a physiologically realistic state transition model can lead to models with a large number of parameters, making robust estimation difficult and increasing the risk of overfitting. Furthermore, the inferred hidden states and transition matrices often lack a direct, one-to-one correspondence with clear physiological concepts. A latent state variable may track changes in variability, but it does not inherently distinguish between, for example, parasympathetic withdrawal and sympathetic activation, thereby limiting the model's physiological interpretability.
+We argue that bridging the gap between data and mechanism requires a fundamental evolution in analytical philosophy: a shift from model-agnostic data description to the construction of hypothesis-driven, generative models. This approach moves beyond simply characterizing what the data looks like and instead focuses on creating explicit, testable, and quantitative models of the biological machinery that produced it. Here, we introduce and validate such a framework, which recasts physiological analysis as a form of formal hypothesis testing. We posit that a stereotyped autonomic response to an acute perturbation is not random noise but a structured, dynamic process. Consequently, we propose it can be effectively modeled as a continuous-time stochastic process, allowing us to separate the structured response from inherent biological variability. As a specific, falsifiable instantiation of this philosophy, we model the response trajectory using a double-logistic function. This mathematical form is chosen not as a universal truth, but as a parsimonious hypothesis for biphasic dynamics, designed to capture the characteristic onset and subsequent recovery phases [@castillo2025enhancing]. The power of this approach lies in its ability to translate the raw signal into a small set of interpretable mechanistic parameters: the latency, rate, and magnitude of each distinct response phase [@castillo2025enhancing]. This provides a direct, quantitative window into the system's underlying reactivity and resilience.
 
-On another front, time-frequency analysis methods have become a popular tool for visualizing non-stationary signals. Techniques like the Short-Time Fourier Transform (STFT) or the Continuous Wavelet Transform (CWT) produce intuitive time-frequency representations, or spectrograms, that show how spectral power changes over time. The CWT, in particular, offers advantages through its multi-resolution analysis, providing better temporal resolution for high-frequency events and better frequency resolution for low-frequency events. These methods can successfully visualize the time-varying nature of spectral content, revealing, for example, a decrease in high-frequency power following a stimulus. However, their primary limitation is that they are fundamentally descriptive, not generative. They provide a processed depiction of the data but do not constitute a formal model of the underlying process. As such, they cannot be used to test specific physiological hypotheses in a principled way. From a wavelet spectrogram, one can observe a change, but one cannot estimate a parameter for the *rate* of that change, the *completeness* of recovery, or the *statistical significance* of a temporal shift. Consequently, no existing model provides a unified, probabilistic framework that can simultaneously capture and mechanistically interpret changes in both the mean RRi and its multi-component variability. The field is thus caught between overly simplistic windowed methods that discard dynamic information and more sophisticated techniques that are either difficult to interpret or are not structured for formal, mechanistic hypothesis testing.
-
-To advance the field beyond these constraints, a new generation of statistical models is clearly needed. A framework capable of surpassing these barriers should, at a minimum, satisfy four critical criteria. First, it must explicitly address the non-stationarity inherent to physiological signals, obviating the need for arbitrary analysis windows. Second, it must be capable of mechanistically decomposing the signal into its distinct components: a gross, underlying trend in heart rate and the structured, oscillatory variability that represents physiological regulation. Third, its parameters should have a direct, interpretable link to specific physiological processes, such as autonomic tone and recovery dynamics. Finally, as a probabilistic framework, it must provide a principled means of quantifying uncertainty for all estimates, moving beyond a reliance on simple point estimates.
-
-To meet these challenges, we therefore propose a novel probabilistic framework. Here, we introduce a model designed to directly confront non-stationarity by treating the RRi signal as a continuous stochastic process. This framework is built to mechanistically decompose the signal into its constituent parts, including a baseline trend and its structured variability. Its core components are defined by flexible functions whose parameters are intended to provide direct physiological insight into response and recovery dynamics. Finally, we will demonstrate how its implementation as a fully Bayesian model yields the robust uncertainty quantification required of a modern analytical framework.
-
-This study introduces and validates a novel probabilistic model for analyzing non-stationary RRi signals. We test the central hypothesis that this framework provides a more robust, informative, and physiologically interpretable analysis of heart rate dynamics than traditional methods. Specifically, we demonstrate its ability to accurately capture transient perturbations and show that its parameters offer enhanced mechanistic nuance into autonomic control. Through this work, we seek to establish a new standard for the analysis of dynamic physiological signals.
-
-```{r}
-#| include: false
-library(ggplot2)
-library(data.table)
-library(brms)
-library(tidybayes)
-library(rstan)
-
-theme_set(
-  new = theme_classic(base_size = 14) +
-    theme(legend.position = "bottom")
-)
-```
+We implement this generative approach within a hierarchical Bayesian framework, which is essential for three reasons. First, it allows for the robust estimation of parameters and their associated uncertainty, treating inference as a problem of probability rather than optimization. Second, its hierarchical structure enables the simultaneous modeling of individual- and group-level effects, capturing both unique response profiles and shared population characteristics. Third, it provides a principled basis for model comparison, allowing researchers to formally adjudicate between competing hypotheses about the underlying process. This paper tests the central hypothesis that this generative framework provides a more accurate, precise, and scientifically useful characterization of autonomic dynamics than is possible with existing methods. Through simulation and application to empirical data, we demonstrate that this approach can recover the ground-truth parameters of a known process and provides novel insights into human stress physiology. We contend that this methodology represents a necessary step forward, providing an extensible framework for translating complex physiological time-series into falsifiable, mechanistic knowledge.
 
 # Results
 
